--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "react-scroll": "^1.9.0",
     "sass": "^1.77.4",
     "scss": "^0.2.4",
     "yup": "^1.4.0"
